--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,14 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ess
     username: root
-#    password: r@@T0000        # Office
-    password: root           # Home
+    password: r@@T0000        # Office
+#    password: root           # Home
+
+springdoc:
+ api-docs:
+  path: /v3/api-docs
+ swagger-ui:
+  path: /swagger-ui.html
 
   jpa:
     hibernate:
