--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     session:
       cookie:
         http-only: true
-    context-path: /api
+    context-path: /api/auth
 
 spring:
   main:
@@ -14,8 +14,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ess
     username: root
-#    password: r@@T0000        # Office
-    password: root           # Home
+    password: r@@T0000        # Office
+#    password: root           # Home
 
   jpa:
     hibernate:
