--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,8 +21,13 @@ spring:
     baseline-on-migrate: true
 
   jpa:
+    properties:
+        hibernate:
+          naming:
+            physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #    hibernate:
 #      ddl-auto: update       # if we are not using flyway migration then it should be configured, otherwise it's not required.
+
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
 
