--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!logs
+
+
+logs/
+
 
 ### STS ###
 .apt_generated
