--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ESS
+    url: jdbc:mysql://localhost:3306/CorpConnect
     username: root
     password: r@@T0000
 
