--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,11 @@
             <artifactId>spring-boot-starter-logging</artifactId>
             <version>3.3.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+        </dependency>
 
     </dependencies>
 
