--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,14 @@
             <version>2.0.16</version>
         </dependency>
 
+        <!-- Mail Service -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
