Added dependencies for web socket

--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,12 @@
             <version>3.3.1</version>
         </dependency>
 
+        <!-- Web Socket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
 
     </dependencies>
 
