Added user initializer for a predefined user on application startup

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,6 +64,11 @@ logging:
   level:
     com.corpConnect.utils.functions.CookieUtils: DEBUG
 
+user-initializer:
+  name: "Rohan Pansara"
+  email: "rohan.pansara@drcsystems.com"
+  password: "Drc@1234"
+
 #cloudinary:
 #  api-key: 132918619484761
 
